--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title></title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" href="styles/plugins/normalize.css">
+		<link rel="stylesheet" href="styles/plugins.min.css">
 		<link rel="stylesheet" href="styles/app.min.css">
 	</head>
 	<body>
@@ -19,7 +19,7 @@
 			<div class="bottom-left-widget">bottom-left-widget</div>
 			<div class="bottom-right-widget">bottom-right-widget</div>
 			<div class="container">
-				Blah Body!
+				<h1>farhan khan.</h1>
 			</div>
 		</div>
 		<script type="text/javascript" src="scripts/plugins.min.js"></script>
