--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="bottom-left-widget">bottom-left-widget</div>
 			<div class="bottom-right-widget">bottom-right-widget</div>
 			<div class="container">
-				<h1>farhan khan.</h1>
+				<h1>tahir ahmed.</h1>
 			</div>
 		</div>
 		<script type="text/javascript" src="scripts/plugins.min.js"></script>
